# libhand-mesh-generator

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  all-no-body-rotation.json  config.json  default.json  demo.py  gen_dataset.py  gen_itse_dataset.py  read_test.py  test.json  test.pkl
configs/: closed-single-viewpoint.json  closed.json  flat.json  halfopen.json  open-single-viewpoint.json  open.json  pinching.json  point-single-viewpoint.json  point.json
configs/pose/: closed-no-body-rotation.json  closed.json  default.json  flat-no-body-rotation.json  flat-single-viewpoint.json  flat.json  halfopen-no-body-rotation.json  halfopen-single-viewpoint.json  halfopen.json  metal.json  open-no-body-rotation.json  open-single-viewpoint.json  open-test-config.json  open-test.json  open.json  pinching-no-body-rotation.json  pinching-single-viewpoint.json  pinching.json  point-no-body-rotation.json  point.json  test.json  train.json
configs/shape/: default.json  p0.json  p1.json  p2.json  p3.json  test.json  train.json
dataset/: read_test.py
include/: json.hpp
src/: CMakeLists.txt  PoseConfig.cpp  PoseConfig.h  PoseGenerator.cpp  PoseGenerator.h  PosePrototype.cpp  PosePrototype.h  ShapeConfig.cpp  ShapeConfig.h  ShapePrototype.cpp  ShapePrototype.h  generate_random.cpp  generate_random.old1  ndarray_converter.cpp  ndarray_converter.h  test.json  test_config.cpp  viewer.cpp
