CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(PoseGenerator)

SET(LIBHAND_PATH "/" CACHE FILEPATH "Path to LibHand repository.")
SET(OPENCV_PATH "" CACHE FILEPATH "Path to OpenCV.")
SET(NUMPY_INCLUDE_PATH "" CACHE FILEPATH "Path to Numpy include files.")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET(CMAKE_BUILD_RPATH "${LIBHAND_PATH}/hand_cpp/build/source")

ADD_DEFINITIONS(
    -O3
)

FIND_PACKAGE(LibHand CONFIG REQUIRED PATHS "${LIBHAND_PATH}/hand_cpp/dist")

INCLUDE_DIRECTORIES("include")

LIST(APPEND CMAKE_MODULE_PATH "/usr/share/OGRE/cmake/modules")

subdirs(src)
